--- a/install
+++ b/install
@@ -8,15 +8,19 @@ if [ $name == "Linux" ]; then
 	library="libTilengine.so"
 	incpath="/usr/include"
 	if [ $arch == "i686" ]; then
+		srcpath="linux_i686"
 		libpath="/usr/lib/i386-linux-gnu"
 	elif [ $arch == "x86_64" ]; then
+		srcpath="linux_x86_64"
 		libpath="/usr/lib/x86_64-linux-gnu"
 	elif [ $arch == "armv7l" ]; then
+		srcpath="linux_arm"
 		libpath="/usr/lib/arm-linux-gnueabihf"
 	fi
 elif [ $name == "Darwin" ]; then
 	library="Tilengine.dylib"
 	incpath="/usr/local/include"
+	srcpath="darwin_x86_64"
 	libpath="/usr/local/lib"
 	mkdir -p $incpath
 	mkdir -p $libpath
@@ -26,7 +30,7 @@ cmakepath="$libpath/cmake/Tilengine"
 pkgconfigpath="$libpath/pkgconfig"
 
 cp include/$include $incpath
-cp lib/$library $libpath
+cp lib/$srcpath/$library $libpath
 mkdir -p $cmakepath
 sed -e "s:<library>:$library:g" -e "s:<incpath>:$incpath:g" -e "s:<libpath>:$libpath:g" tilengine-config.cmake > $cmakepath/tilengine-config.cmake
 mkdir -p $pkgconfigpath
