Updates Makefile and install to use library folder path based on CPU architecture under linux

--- a/install
+++ b/install
@@ -12,13 +12,7 @@ if [ $name == "Linux" ]; then
 	library="libTilengine.so"
 	incpath="$tgtpath/include"
 	libpath="$tgtpath/lib"
-	if [ $arch == "i686" ]; then
-		srcpath="linux_i686"
-	elif [ $arch == "x86_64" ]; then
-		srcpath="linux_x86_64"
-	elif [ $arch == "armv7l" ]; then
-		srcpath="linux_arm"
-	fi
+	srcpath="linux_$arch"
 elif [ $name == "Darwin" ]; then
 	library="Tilengine.dylib"
 	incpath="/usr/local/include"
